[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Enemies/ShootingShip.gd" type="Script" id=1]
[ext_resource path="res://assets/img/shooting-enemy-ship.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.0277
height = 0.154728

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 23 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 24, 23 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 24, 23 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 12.3798
height = 0.958282

[node name="ShootingShip" type="KinematicBody2D" groups=[
"enemies",
]]
scale = Vector2( 3, 3 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Animation" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
frame = 3
playing = true

[node name="HurtArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
shape = SubResource( 6 )
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="body_entered" from="HurtArea" to="." method="_on_HurtArea_body_entered"]
[connection signal="body_exited" from="HurtArea" to="." method="_on_HurtArea_body_exited"]
